--- a/safira_api/Dockerfile
+++ b/safira_api/Dockerfile
@@ -2,6 +2,8 @@ FROM openjdk:8u151-jre-slim
 
 COPY artifact/safira_api.jar /safira_api.jar
 
-CMD ["java", "-jar", "safira_api.jar"]
+WORKDIR /
+
+ENTRYPOINT java -Djava.security.egd=file:/dev/./urandom -jar safira_api.jar
 
 EXPOSE 8080
